Fixing word wrap issues with lists on page

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -29,6 +29,11 @@
     }
 }
 
+// Lists on Pages
+.container li, ul {
+    word-wrap: normal;
+}
+
 // Site Header (_includes/site-header.html)
 .header {
     background: $accentColour;
